# Schulprojekt

./: CMakeLists.txt  UNLICENSE
.lapce/: run.toml
game/: BufferStructs.h  CMakeLists.txt  constants.h  game.cpp  game.h  input.cpp  input.h  level.cpp  level.h  main.cpp  material.cpp  material.h  particles.cpp  particles.h  renderEngine.cpp  renderEngine.h
shaders/: bulletShader.vert  bulletShading.frag  compile  particleShader.frag  particleShader.vert  shader.frag  shader.vert
shaders/compiled/: bulletFrag.spv  bulletVert.spv  frag.spv  particleFrag.spv  particleVert.spv  vert.spv
